more spacing fixes

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -329,6 +329,7 @@ i was mostly experimenting with figma design */
 .gridLayout .card {
   grid-column: 1 / span 2;
   margin: 0;
+  padding: 0;
 }
 
 .gridLayout .miniCard {
@@ -339,6 +340,10 @@ i was mostly experimenting with figma design */
 
 .gridLayout .miniCard p {
   padding: 0 24px 14px 24px;
+}
+
+.gridLayout .miniCard h2 {
+  margin-bottom: 8px;
 }
 
 /* jank ass wedge code */
@@ -412,7 +417,7 @@ mark {
   background: var(--cardBackgroundColor) 0% 0% no-repeat padding-box;
   border: 4px solid var(--cardLinesColor);
   border-radius: 10px;
-  max-width: 1446px;
+  max-width: 1486px;
   min-height: 734px;
   margin-top: 62px;
   margin-bottom: 62px;
@@ -421,9 +426,9 @@ mark {
 .cardBackground h1 {
   /* font: normal normal 600 42px/36px Torus Pro; */
   font-size: 42px;
-  margin-top: 24px;
   margin-left: 121px;
-  margin-bottom: 24px;
+  margin-top: 34px;
+  margin-bottom: 34px;
   /* used to be 24 px */
 }
 
